# cehrbert_data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-build.yml  tests.yml
sample_data/omop_sample/concept/: .part-00000-4b12270c-f6c8-4b59-8e0f-fd588bd79386-c000.snappy.parquet.crc  .part-00003-4b12270c-f6c8-4b59-8e0f-fd588bd79386-c000.snappy.parquet.crc  .part-00010-4b12270c-f6c8-4b59-8e0f-fd588bd79386-c000.snappy.parquet.crc  part-00000-4b12270c-f6c8-4b59-8e0f-fd588bd79386-c000.snappy.parquet  part-00003-4b12270c-f6c8-4b59-8e0f-fd588bd79386-c000.snappy.parquet  part-00010-4b12270c-f6c8-4b59-8e0f-fd588bd79386-c000.snappy.parquet
sample_data/omop_sample/concept_ancestor/: .part-00000-eafbd8be-3337-46da-89d3-20f79c2565d4-c000.snappy.parquet.crc  .part-00002-eafbd8be-3337-46da-89d3-20f79c2565d4-c000.snappy.parquet.crc  .part-00006-eafbd8be-3337-46da-89d3-20f79c2565d4-c000.snappy.parquet.crc  .part-00011-eafbd8be-3337-46da-89d3-20f79c2565d4-c000.snappy.parquet.crc  .part-00013-eafbd8be-3337-46da-89d3-20f79c2565d4-c000.snappy.parquet.crc  part-00000-eafbd8be-3337-46da-89d3-20f79c2565d4-c000.snappy.parquet  part-00002-eafbd8be-3337-46da-89d3-20f79c2565d4-c000.snappy.parquet  part-00006-eafbd8be-3337-46da-89d3-20f79c2565d4-c000.snappy.parquet  (+2 more)
scripts/: extract_features.sh  extract_features_bert.sh  extract_features_gpt.sh  process_cohorts.sh
src/cehrbert_data/cohorts/: cabg.py  (+11 more)
tests/: pyspark_test_base.py
tests/integration_tests/: test_generate_training_data.py  test_hf_readmission.py  test_hf_readmission_cohort_meds.py
tests/unit_tests/: test_ehrshot_to_omop.py  test_spark_utils.py
(+64 files in other folders)
