[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cehrbert_data"
dynamic = ["version"]
authors = [
    { name = "Chao Pang", email = "chaopang229@gmail.com" },
    { name = "Xinzhuo Jiang", email = "xj2193@cumc.columbia.edu" },
    { name = "Krishna Kalluri", email = "kk3326@cumc.columbia.edu" },
    { name = "Nishanth Parameshwar Pavinkurve", email = "np2689@cumc.columbia.edu" },
    { name = "Karthik Natarajan", email = "kn2174@cumc.columbia.edu" }
]
description = "The Spark ETL tools for generating the CEHR-BERT and CEHR-GPT pre-training and finetuning data"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "numpy==1.24.3",
    "packaging==23.2",
    "pandas==2.2.0",
    "pyspark==3.1.2"
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/knatarajan-lab/cehrbert_data"

[project.optional-dependencies]
dev = [
    "pre-commit", "pytest", "pytest-cov", "pytest-subtests", "rootutils", "hypothesis", "black"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
